--- a/src/app/homepage/components/dynamic-body/dynamic-body.component.html
+++ b/src/app/homepage/components/dynamic-body/dynamic-body.component.html
@@ -6,23 +6,23 @@
         </tr>
         <tr> 
           <td >Alfreds Futterkiste</td> 
-          <td>ver detalle</td> 
+          <td (click)="activeDetail(1)">ver detalle</td> 
         </tr>
         <tr> 
           <td >Centro comercial Moctezuma</td>
-          <td (click)="activeDetail()" >ver detalle</td>
+          <td (click)="activeDetail(2)" >ver detalle</td>
         </tr>
         <tr> 
             <td >Centro comercial Moctezuma</td>
-            <td >ver detalle</td>
+            <td (click)="activeDetail(3)">ver detalle</td>
           </tr>
           <tr> 
             <td >Centro comercial Moctezuma</td>
-            <td >ver detalle</td>
+            <td (click)="activeDetail(4)" >ver detalle</td>
           </tr>
           <tr> 
             <td >Centro comercial Moctezuma</td>
-            <td >ver detalle</td>
+            <td (click)="activeDetail(5)" >ver detalle</td>
           </tr>
           <tr> 
             <td >Centro comercial Moctezuma</td>
