--- a/src/app/homepage/components/dynamic-modal/dynamic-modal.component.html
+++ b/src/app/homepage/components/dynamic-modal/dynamic-modal.component.html
@@ -1,4 +1,4 @@
-<div class="dynamic-modal-container">
+<div class="dynamic-modal-container" (click)="deactivateDetail()">
 
     <div class="dynamic-modal">
         
